修改安装包的删除为批量删除
